Updated meta data and added new favicon.

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="keywords" content="stredná škola, stredná odborná škola strojnícka, Bánovce nad Bebravou, mapa školy, prehliadka školy">
+    <meta name="theme-color" content="#496bff" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Virtuálna prehliadka strednej odbornej školy strojníckej Bánovce nad Bebravou."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>SOŠ strojnícka Bánovce nad Bebravou</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
